assets/project1/src/ast/grammar.txt
PROGRAM ::= VARS* , [PLAYER] , [BLOCKADE] , WAVE*
VARS ::= "VARIABLE: " , VAR_NAME , "=" , VAR_VALUE
VAR_NAME ::== STRING
VAR_VALUE ::== BLOCKADE | MOVEMENT | SPEED
PLAYER ::= "PLAYER: " ,"[", HP ,"|", (SPEED  | VAR_NAME) ,"] "
BLOCKADE ::= ("BLOCKADE: " , HP, SPAWN) | VAR_NAME
WAVE ::= "WAVE:" , ENEMY+
ENEMY:: = ENEMYVALUE, SPAWN , ROWS , [MOVEMENTS]
ENEMYVALUE ::= "[" , E_SPRITE ": " , HP ,"|", (SPEED | VAR_NAME) , POINTS , "] "
E_SPRITE ::= "ALIEN" | "BOSS | "BONUS"
HP ::= "HP" , "=" , NUMBER
SPEED ::= "SPEED" , "=" , NUMBER | F(t)
SPAWN ::= "SPAWN" , "=" , NUMBER
ROWS ::= "ROWS" , "=" , NUMBER
POINTS ::= "POINTS" , "=" , NUMBER
F(t) ::= STRING (* Function of time *)
MOVEMENTS ::= "MOVEMENT: " , (MOVEMENT | VAR_NAME), ("|", (MOVEMENT | VAR_NAME))*
MOVEMENT ::= MOVEMENTVALUE+, LOOP
MOVEMENTVALUE ::= DIRECTION , "=" , NUMBER
DIRECTION ::= "LEFT" | "RIGHT" | "UP" | "DOWN"
LOOP ::= "LOOP" , "=" , NUMBER
